# design_pattern

documents/: AbstractFactory_FactoryMethod.pptx
plantuml/: General_Builder.txt  General_Builder_Sequence.txt  Translator_Builder.txt
sample/: CMakeLists.txt
sample/3-chapter/: CMakeLists.txt  abstractfactory.cpp  product.cpp  prototype_abstractfactory.cpp  singleton_abstractfactory.cpp  uname_cmp.cpp  upgrade_product.cpp
sample/5-chapter/: CMakeLists.txt  nonpurevirtual.cpp
